objects/APTS_Wizard_Global_Variables__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Current_Spread_Hypothesis_Max__c</fullName>
        <label>Current Spread Hypothesis Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Current_Spread_Hypothesis_Min__c</fullName>
        <label>Current Spread Hypothesis Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Rescaling_Spread_Max__c</fullName>
        <label>Rescaling Spread Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Rescaling_Spread_Min__c</fullName>
        <label>Rescaling Spread Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Wizard Global Variables</label>
</CustomObject>